LABS/K8s/lab_minio_configMap+secret+ingress.yaml
--- Lab: MinIO ---
V K8s klastri spustite službu MinIO za dodržania nasledujúcich podmienok:
● služba bude spustená v mennom priestore s názvom storage
● obraz, z ktorého službu spustíte, sa volá bitnami/minio
● pomocou premennej prostredia MINIO_DEFAULT_BUCKETS nastavte zoznam
"bucketov", ktoré sa vytvoria rovno pri prvom spustení. Tento zoznam nech obsahuje
tieto položky:
○ music
○ pictures
○ videos
○ books
● pomocou premennej prostredia MINIO_ROOT_USER nastavte meno admin
používateľa na hodnotu janosik
● pomocou premennej prostredia MINIO_ROOT_PASSWORD nastavte heslo admin
používateľa na hodnotu opastok.vybijany
● službu spustite v troch replikách
● službu spustite ako ClusterIP a otvorte porty 9000 (pre API prístup) a 9001 (pre
UI)
● pre testovacie účely vytvorte službu typu NodePort na porte 32000, cez ktorú sa
bude možné dostať k používateľskému rozhraniu služby
● pre produkčné nasadenie umožnite prístup k službe prostredníctvom Ingress
Controller-a na ceste /.


SOLUTION:
apiVersion: v1
kind: Namespace
metadata:
  name: minio

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - image: bitnami/minio
        name: minio
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
spec:
  ports:
  - name: api 
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: ui  
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-test
spec:
  ports:
  - name: api 
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: ui  
    port: 9001
    nodePort: 32000
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ctrl
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: minio
            port:
              number: 9001
        path: /
        pathType: Prefix
